change title for every page

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load pipes %}
-
+{% block title %}Castle Apartments{% endblock %}
 {% block mainbody %}
 	<div class="row m-3">
         <div class="col-md-6 col-lg-6 col-12 pl-0 pr-2">
