--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Apartments{% endblock %}
 {% block mainbody %}
 
     <div class="m-3 red-background border-shadow">
