--- a/Castle/templates/sellers/seller_info.html
+++ b/Castle/templates/sellers/seller_info.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}{{ seller.user.user_info.name }}{% endblock %}
 {% block mainbody %}
 
     <div class="w-100 p-3">
