--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}My Profile{% endblock %}
 {% block mainbody %}
 
     <div class="m-3 red-background border-shadow">
