--- a/Castle/templates/users/login.html
+++ b/Castle/templates/users/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Login{% endblock %}
 {% block mainbody %}
     <div class="row m-3">
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
@@ -9,19 +9,8 @@
                     <form class="form" method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
-{#                <div class="form-group">#}
-{#                    <label for="username" class="col-sm-12 control-label">Username</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input name="username" type="text" class="form-control" autofocus>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-group">#}
-{#                    <label for="password" class="col-sm-12 control-label">Password</label>#}
-{#                    <div class="col-sm-9">#}
-{#                        <input name="password" type="password" class="form-control" autofocus>#}
                         <a href="/users/password_reset">Forgot password?</a>
-{#                    </div>#}
-{#                </div>#}
+
 
                         <div style="margin-top:0.4rem">
                             <button type="submit" class="green-button">Login</button>
