edit seller and more

--- a/Castle/templates/users/edit_user.html
+++ b/Castle/templates/users/edit_user.html
@@ -10,6 +10,9 @@
                     <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
+                        {% if form2 %}
+                            {{ form2.as_p }}
+                        {% endif %}
                           <div style="margin-top:0.4rem">
                             <button type="submit" class="green-button">Update</button>
                         </div>
