Prep for adding apartments... needs fix

--- a/Castle/templates/users/seller_profile.html
+++ b/Castle/templates/users/seller_profile.html
@@ -35,7 +35,7 @@
     <div class="row w-100 p-3">
         <div class="col-4"><button id="seller_apartments" type="submit" class="btn green-button w-100">See my apartments</button></div>
         <div class="col-4"><button id="sale_stats" type="submit" class="btn green-button w-100">See sales statistics</button></div>
-        <div class="col-4"><button id="new_apartment" type="submit" class="btn green-button w-100">Add new apartment</button></div>
+        <div class="col-4"><a href="/users/add_apartment"><button id="new_apartment" type="submit" class="btn green-button w-100">Add new apartment</button></a></div>
     </div>
 
 {% endblock %}
