fix edit profile for seller and fix editing image for seller

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -399,6 +399,10 @@ body {
 .sub-container {
     height:100%;
 }
-input[name="profile_pic"] {
+input[name="profile_pic"], input[name='logo'] {
+    width:100%
+}
+
+#id_description{
     width:100%
 }
