--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -22,9 +22,9 @@
                 </div>
                 <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
                     <h3>{{ user.username }}</h3>
-                    <h5>Name: {{ info.name}}</h5>
-                    <h5>Phone: {{ info.phone }}</h5>
-                    <h5>E-mail: {{ info.email }}</h5>
+                    <h5>Name: <span style="font-weight:normal">{{ info.name }}</span></h5>
+                    <h5>Phone: <span style="font-weight:normal">{{ info.phone }}</span></h5>
+                    <h5>E-mail: <span style="font-weight:normal">{{ info.email }}</span></h5>
                     <br>
                     <div>
                         <a href="/users/edit_user"><button id="editButton" type="submit" class="btn green-button">Edit profile</button></a>
