starting add new apartment and see apartments by seller

--- a/Castle/templates/sellers/seller_info.html
+++ b/Castle/templates/sellers/seller_info.html
@@ -22,5 +22,21 @@
         <p>{{ seller.description }}</p>
         <button class="btn green-button">Contact</button>
     </div>
+    <div class="w-100 px-3 pb-3">
+        <div class="gray-background border-shadow w-100">
+            <div class="row" style="margin:auto !important">
+                <div class="col-2"><h4 class="prev_arrow"><</h4></div>
+                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments</h5></div>
+                <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
+            </div>
+            <div class="new_aparts-container container px-0 m-0">
+                <div class="newest_apartments">
+                    {% for apartment in newest %}
+                        {% include 'apartments/single_apartment.html' with apartment=apartment %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
