--- a/Castle/templates/sellers/seller_info.html
+++ b/Castle/templates/sellers/seller_info.html
@@ -14,7 +14,7 @@
             </div>
             <div class="new_aparts-container container px-0 m-0">
                 <div class="newest_apartments">
-                    {% for apartment in newest %}
+                    {% for apartment in apartments %}
                         {% include 'apartments/single_apartment.html' with apartment=apartment %}
                     {% endfor %}
                 </div>
