--- a/Castle/templates/users/add_apartment.html
+++ b/Castle/templates/users/add_apartment.html
@@ -6,14 +6,14 @@
         <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Register new user</h5>
+                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Add an apartment</h5>
                     <form class="form" method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <script src='https://www.google.com/recaptcha/api.js'></script>
                         <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
-                        <button type="submit" class="green-button">Register</button>
+                        <button type="submit" class="green-button">Submit</button>
 
                         {% if messages %} {# For Google Captcha #}
                             {% for message in messages %}
