complete seller profile and some minor fixes

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -81,7 +81,7 @@
     margin-top: 0.25rem;
     margin-bottom: 0.5rem;
 }
-.newest_apartments {
+.newest_apartments, .sold_apartments {
     box-sizing: border-box;
 }
 .login-column {
