--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -36,7 +36,7 @@
         <p>Rooms: {{ apartment.rooms }}</p>
         <hr class="bg-custom">
         <p>{{ apartment.description }}</p>
-        <h6>Seller: <a href="{% url 'seller_info' apartment.seller.id %}">{{ apartment.seller.user.name }}</a></h6>
+        <h6>Seller: <a href="{% url 'seller_info' apartment.seller.id %}">{{ apartment.seller.user.user_info.name }}</a></h6>
         {% if not user.user_info.seller and not apartment.sold %}
         <a href="{% url 'buy_contact' apartment.id %}">
             <button type="button" class="btn green-button float-right" style="width: fit-content">Buy this apartment</button>
