styling for adding apartment

--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -413,3 +413,17 @@ input[name="profile_pic"], input[name='logo'] {
 .seller_title:hover {
     color:rgba(94,29,29,0.7)
 }
+
+#addMoreImageFields:hover {
+    cursor:pointer;
+    color:#0056b3;
+    text-decoration:underline;
+}
+
+#addMoreImageFields {
+    color:#007bff
+}
+
+#id_images_3, #id_images_4, #id_images_5, #id_images_6, #id_images_7, #id_images_8, #id_images_9, #id_images_10, #id_images_11, #id_images_12, #id_images_13, #id_images_14, #id_images_15, #id_images_16, #id_images_17, #id_images_18, #id_images_19 {
+    display:none
+}
