--- a/Castle/templates/users/add_apartment.html
+++ b/Castle/templates/users/add_apartment.html
@@ -9,10 +9,8 @@
                     <h5 style="color:#5F1C1C; margin-bottom:2%;">Add an apartment</h5>
                     <form class="form" method="POST">
                         {% csrf_token %}
-                        <table class="w-100">
-                           {{ form }}
-                        </table>
-
+                           {{ form.as_p }}
+                        <p href="#" id="addMoreImageFields">Add another image</p><br><br>
                         <button type="submit" class="btn green-button">Submit</button>
 
                         {% if form.errors %}
