--- a/Castle/templates/users/seller_profile.html
+++ b/Castle/templates/users/seller_profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load pipes %}
 {% block title %}My Profile{% endblock %}
 {% block mainbody %}
      <div class="m-3 red-background border-shadow">
@@ -49,21 +50,35 @@
         </div>
     </div>
 
-    <div class="row w-100 p-3">
-        <div class="col-6"><button id="sale_stats" type="submit" class="btn green-button w-100">See sales statistics</button></div>
-        <div class="col-6"><a href="{% url 'add_apartment' %}"><button id="new_apartment" type="submit" class="btn green-button w-100">Add new apartment</button></a></div>
+{#    <div class="row w-100 p-3">#}
+{#        <div class="col-6"><button id="sale_stats" type="submit" class="btn green-button w-100">See sales statistics</button></div>#}
+{##}
+{#    </div>#}
+
+    <div class="m-3 simple-border">
+        <div class="row mx-3 py-3">
+            <div class="col-8">
+                <p>Total apartments on file: <strong>{{ apartments|length }}</strong></p>
+                <p>Apartments sold: <strong>{{ sold_apartments|length }}</strong></p>
+                <p>Apartments for sale: <strong>{{ for_sale|length }}</strong></p>
+                <p>Total sales amount: <strong>{{ money | dotSeperator }} ISK</strong></p>
+            </div>
+            <div class="col-4 text-right pb-2">
+                <a href="{% url 'add_apartment' %}"><button id="new_apartment" type="submit" class="btn green-button" style="width: fit-content">Add new apartment</button></a>
+            </div>
+        </div>
     </div>
 
      <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
             <div class="row" style="margin:auto !important">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments on sale</h5></div>
+                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments for sale</h5></div>
                 <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
                 <div class="newest_apartments">
-                    {% for apartment in apartments %}
+                    {% for apartment in for_sale %}
                         {% include 'apartments/single_apartment.html' with apartment=apartment %}
                     {% endfor %}
                 </div>
@@ -76,7 +91,7 @@
             <div class="row" style="margin:auto !important">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
                 <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments sold</h5></div>
-                <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
+                <div class="col-2"><h4 class="next_arrow">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
                 <div class="sold_apartments">
