--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -97,7 +97,7 @@
     <div class="row apartments-list">
     {% for apartment in apartments %}
         <div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
-            <div class="gray-background border-shadow">
+            <div class="gray-background border-shadow apartment-container">
                 {% include 'apartments/single_apartment.html' with apartment=apartment %}
             </div>
         </div>
