--- a/Castle/templates/apartments/single_apartment.html
+++ b/Castle/templates/apartments/single_apartment.html
@@ -1,7 +1,13 @@
 {% load pipes %}
 
-<div class="card bg-custom border-shadow text-white">
-    <a href="{% url 'apartment_info' apartment.id %}"><img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic"></a>
+<div class="card bg-custom border-shadow text-white" style="height:100%">
+    <a href="{% url 'apartment_info' apartment.id %}">
+        {% if apartment.main_pic %}
+        <img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic">
+        {% else %}
+        <img class="card-img-top" src="/static/images/imgnotfound.png" alt="apartment pic">
+        {% endif %}
+    </a>
     <div class="card-body single-apartment-card">
         <h5 class="card-title"><a href="{% url 'apartment_info' apartment.id %}">{{ apartment.address }}</a></h5>
         <h6 class="card-subtitle">{{ apartment.zip_code.id }} {{ apartment.zip_code.town }}</h6>
