--- a/Castle/templates/users/seller_profile.html
+++ b/Castle/templates/users/seller_profile.html
@@ -77,7 +77,7 @@
                 <div class="col-2 next-container"><h4 class="next_arrow text-right">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
-                <div class="newest_apartments">
+                <div class="newest_apartments apartment-container">
                     {% for apartment in for_sale %}
                         {% include 'apartments/single_apartment.html' with apartment=apartment %}
                     {% endfor %}
@@ -94,7 +94,7 @@
                 <div class="col-2 next-container"><h4 class="next_arrow2">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
-                <div class="sold_apartments">
+                <div class="sold_apartments apartment-container">
                     {% for apartment in sold_apartments %}
                         {% include 'apartments/single_apartment.html' with apartment=apartment %}
                     {% endfor %}
