--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -7,16 +7,16 @@
     <div class="m-3">
         <div class="gray-background border-shadow w-100">
             <div class="row">
-                <digv class="col-4 apartment_info_small">
-                    <img class="w-50 d-inline" src="{{ apartment.main_pic }}" alt="apartment pic">
+                <div class="apartment-left">
+                    <
+                </div>
+                <div class="apartment-right">
+                    >
+                </div>
+                <div class="col-12 apartment_info_main_pic">
+                    <img style="height:400px;text-align:center;margin:auto" src="{{ apartment.main_pic }}" alt="apartment pic">
                     {% for img in apartment.apartment_images_set.values %}
-                        <img class="w-50" src="{{ img.image }}" alt="apartment pic">
-                    {% endfor %}
-                </digv>
-                <div class="col-8 apartment_info_main_pic">
-                    <img src="{{ apartment.main_pic }}" alt="apartment pic">
-                    {% for img in apartment.apartment_images_set.values %}
-                        <img src="{{ img.image }}" alt="apartment pic" style="max-height: 500px; object-fit: contain;">
+                        <img style="height:400px" src="{{ img.image }}" alt="apartment pic" style="max-height: 500px; object-fit: contain;">
                     {% endfor %}
                 </div>
             </div>
@@ -32,8 +32,8 @@
                 <h5>Price: {{ apartment.price | dotSeperator }} ISK</h5>
             </div>
         </div>
-        <p>Size: {{ apartment.size }} sqm</p>
-        <p>Rooms: {{ apartment.rooms | roomFixer }}</p>
+        <p><strong>Size:</strong> {{ apartment.size }} sqm</p>
+        <p><strong>Rooms:</strong> {{ apartment.rooms | roomFixer }}</p>
         <hr class="bg-custom">
         <p>{{ apartment.description }}</p>
         <h6>Seller: <a href="{% url 'seller_info' apartment.seller.id %}">{{ apartment.seller.user.user_info.name }}</a></h6>
